--- a/temp_web/templates/display.html
+++ b/temp_web/templates/display.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
@@ -6,8 +6,27 @@
 </head>
 <body>
     <h1>Annotated Image</h1>
-    <img src="{{ url_for('uploaded_file', filename=filename) }}" alt="Annotated Image">
+    <img src="{{ url_for('uploaded_file', filename=filename) }}?v={{ cache_buster }}" alt="Annotated Image">
     <br>
     <a href="/">Upload another image</a>
+</body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+    <title>Palm Maturity</title>
+</head>
+<body>
+    <div class="display-wrapper">
+        <h1 class="display-title">Palm Maturity</h1>
+        <div class="image-display-container">
+            <img src="{{ url_for('uploaded_file', filename=filename) }}?v={{ cache_buster }}" alt="Palm Maturity" class="display-image">
+        </div>
+        <button class="return-upload-btn" onclick="location.href='/'">Upload another<br>image</button>
+    </div>
 </body>
 </html>
